# conduit

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.base.config.js  tailwind.config.js
.github/workflows/: ci.yml
assets/tailwind/: input.css  tailwind.config.js
docs/: implementation-plan.md  project-plan.md  project-request.md  project-spec.md
docs/frameworks/: alpine-js.md  htmx.md  tailwind.md
docs/openreferral/: schema_reference.md
e2e/pulse/: playwright.config.ts
src/conduit/: __init__.py  apps.py  asgi.py  test_home.py  test_nav.py  urls.py  wsgi.py
src/hsds/: __init__.py  admin.py  api.py  apps.py  forms.py  models.py  test_api.py  test_commands.py  test_models.py  test_views.py  translation.py  urls.py  views.py
src/hsds_ext/: __init__.py  admin.py  apps.py  test_models.py
src/pulse/: __init__.py  apps.py  permissions.py  test_permissions.py  test_views.py  urls.py
src/resources/: __init__.py  apps.py  exceptions.py  permissions.py  test_bulk_ops_api.py  test_drafts_api.py  test_health_api.py  test_merge_api.py  test_resource_api.py  test_search_api.py  test_sensitive.py  test_shelves.py  test_utils.py  test_worklists.py  urls.py
src/users/: __init__.py  admin.py  apps.py  models.py  test_models.py  test_views.py  views.py
templates/: base.html  home.html  nav.html
templates/hsds/: base.html  contact_detail.html  contact_list.html  dashboard.html  location_detail.html  location_list.html  (+5 more)
(+254 files in other folders)
