[project]
name = "conduit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "django-filter>=24.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "django-component>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.8.0",
]
