[project]
name = "conduit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.2.5",
  "djangorestframework>=3.16.1",
  "django-filter>=24.3",
  "gunicorn>=23.0.0",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.1.1",
  "django-components>=0.141.3",
  "django-modeltranslation>=0.19.16",
  "django-htmx>=1.17.0",
  "jsonpatch>=1.33",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "pytest-django>=4.8.0"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["pragma: no cover"]

[tool.mypy]
ignore_missing_imports = true
mypy_path = "stubs"
namespace_packages = true
explicit_package_bases = true
